# Sand

./: .dockerignore  .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  custom.css  shell.nix
.github/workflows/: autotest.yml  cmake-multi-platform.yml
docs/: annotated.html  annotated_dup.js  classWorld-members.html  classWorld.html  classWorld__coll__graph.map  classWorld__coll__graph.md5  classWorld_a90e7727bc88108144520e781d2ce9966_cgraph.md5  classes.html  classes_8cpp.html  classes_8h_source.html  classes_8hpp.html  classes_8hpp__incl.map  classes_8hpp_source.html  custom.css  dir_000001_000000.html  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_5c982d53a68cdbcd421152b4020263a9.js  dir_5c982d53a68cdbcd421152b4020263a9_dep.map  dir_5c982d53a68cdbcd421152b4020263a9_dep.md5  dir_bad007344d42f4b5340fab5412b591e5.html  dir_bad007344d42f4b5340fab5412b591e5.js  dir_bad007344d42f4b5340fab5412b591e5_dep.md5  doxygen.css  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  index.html  main_8cpp.html  menudata.js  navtree.css  pages.html  structPixel-members.html  structPixel.html  structPixel.js  (+5 more)
docs/html/: bug.html  classWorld.js  classWorld_a90e7727bc88108144520e781d2ce9966_cgraph.map  classes_8cpp.html  classes_8cpp.js  classes_8cpp__incl.map  classes_8cpp__incl.md5  classes_8hpp.js  classes_8hpp__dep__incl.map  classes_8hpp__dep__incl.md5  classes_8hpp__incl.md5  classes_8hpp_source.html  dir_000001_000000.html  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_bad007344d42f4b5340fab5412b591e5_dep.map  doxygen.css  doxygen_crawl.html  files.html  functions_vars.html  globals.html  globals_type.html  graph_legend.html  index.js  inline_umlgraph_svghtml.pu  main_8cpp.html  main_8cpp.js  main_8cpp__incl.map  main_8cpp__incl.md5  md_README.html  navtreedata.js  navtreeindex0.js  structPixel-members.html  structPixel.html  structPixel__coll__graph.map  structPixel__coll__graph.md5  structVector2-members.html  structVector2.html  structVector2__coll__graph.map  structVector2__coll__graph.md5
docs/html/search/: all_4.js  all_5.js  all_9.js  all_a.js  all_b.js  all_e.js  all_f.js  defines_0.js  defines_2.js  defines_4.js  functions_0.js  functions_1.js  functions_5.js  functions_6.js  functions_7.js  pages_1.js  pages_3.js  searchdata.js  typedefs_0.js  variables_1.js  variables_3.js  variables_5.js  variables_b.js
docs/search/: all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_c.js  classes_0.js  defines_1.js  defines_3.js  enums_0.js  files_0.js  functions_2.js  functions_3.js  functions_4.js  pages_5.js  search.css  variables_0.js  variables_2.js  variables_4.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js
main/: classes.cpp  main.cpp
main/include/: classes.hpp  config.hpp
sand/: main.cpp
test/: test.cpp
